fix images not showing and menu showing in desktop version

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
 
   .headline-section {
     background-color: #1C1A19;
-    background-image: url(images/illustration-header-mobile.png);
+    background-image: url(../images/illustration-header-mobile.png);
     background-repeat: no-repeat;
     background-position: bottom right;
     height: 590px;
@@ -307,36 +307,36 @@ padding: 10px 20px;
   }
 
   .first-project {
-    background-image: url(images/clear-bg.png);
+    background-image: url(../images/clear-bg.png);
     
    
 }
 
 .second-project {
-    background-image: url(images/card-2.png);
+    background-image: url(../images/card-2.png);
    
    
 }
 
 .third-project {
-    background-image: url(images/card-3.png);
+    background-image: url(../images/card-3.png);
 
    
 }
 
 .fourth-project {
-    background-image: url(images/card-bg.png);
+    background-image: url(../images/card-bg.png);
    
    
 }
 
 .fifth-project {
-    background-image: url(images/card-2.png);
+    background-image: url(../images/card-2.png);
    
 }
 
 .sixth-project {
-    background-image: url(images/card-3.png);
+    background-image: url(../images/card-3.png);
     
    
 }
@@ -410,7 +410,7 @@ border: none;
   .about {
     height: 700px;
     padding: 0 20px;
-    background-image: url(images/illustration-about-me-mobile.png);
+    background-image: url(../images/illustration-about-me-mobile.png);
     background-repeat: no-repeat;
     background-size: 200px;
     background-position: right bottom;
@@ -560,6 +560,9 @@ label {
         height: 72px;
       }
 
+      .mobile-menu {
+        display: none;
+      }
       
     .hamburger, .show-close-menu {
         display: none;
@@ -572,7 +575,7 @@ label {
 
 
     .headline-section {
-    background-image: url(images/Illustration-header.png);
+    background-image: url(../images/Illustration-header.png);
     background-repeat: no-repeat;
     background-position: top right;
     background-size: contain;
@@ -668,7 +671,7 @@ color: #091E42;
    
 
     .about {
-       background-image: url(images/illustration-about\ me@2x.png);
+       background-image: url(../images/illustration-about\ me@2x.png);
        background-position: center right;
        background-repeat: no-repeat;
        background-size: 50%;
